--- a/css/main.css
+++ b/css/main.css
@@ -110,8 +110,8 @@ body {
 }
 
 h2 {
-  font-size: 2em;
   font-family: 'Lora', serif;
+  font-size: 2em;
   line-height: 1;
 }
 
@@ -122,15 +122,15 @@ p {
 /*   HEADER   */
 
 header {
-  background: url(../img/hero.png) center #999;
+  background: url(../img/hero.png) center #9b9b9b;
   background-size: cover;
   min-height: 500px;
 }
 
 .header-h1-container {
+  align-items: flex-start;
   display: flex;
   justify-content: center;
-  align-items: flex-start;
   width: 100%;
 }
 
@@ -151,11 +151,11 @@ header nav {
 }
 
 header nav ul {
-  width: 100%;
   display: flex;
   justify-content: space-around;
-  padding-left: 0;
   list-style-type: none;
+  padding-left: 0;
+  width: 100%;
 }
 
 header nav ul li {
@@ -168,9 +168,9 @@ nav ul li a {
 }
 
 .header-h2-container {
+  align-items: center;
   display: flex;
   justify-content: flex-start;
-  align-items: center;
   width: 100%;
 }
 
@@ -204,14 +204,18 @@ header h2 span {
   padding-top: 25px;
 }
 
+.content-container {
+  width: 100%;
+}
+
 .section-1, .section-2, .section-3 {
   text-align: center;
 }
 
 #work i {
+  color: #c49075;
   font-size: 3.75em;
   margin: 25px;
-  color: #c49075;
 }
 
 #work h3 {
@@ -230,7 +234,7 @@ footer {
   background-color: #ebebeb;
 }
 
-.footer-img {
+.footer-img-container {
   width: 100%;
 }
 
@@ -282,16 +286,16 @@ footer #socialmedia-header {
 
 footer a {
   color: #c49075;
-  text-decoration: none;
   font-weight: bold;
+  text-decoration: none;
   width: 100%;
 }
 
 footer .social-icons {
   align-items: center;
   display: flex;
-  justify-content: space-between;
   flex-flow: row wrap;
+  justify-content: space-between;
   width: 100%;
 }
 
@@ -403,8 +407,8 @@ footer .social-icons p {
   /* HEADER */
 
   .header-h2-container {
-    width: 75%;
     text-align: left;
+    width: 75%;
   }
 
   h2 {
@@ -414,8 +418,16 @@ footer .social-icons p {
   /* WORK */
 
   #work .content-wrapper {
+    align-items: center;
+    justify-content: center;
+    min-height: 500px;
+  }
+
+  .content-container {
     align-items: flex-start;
+    display: flex;
     justify-content: space-between;
+    width: 90%;
   }
 
   .section-1, .section-2, .section-3 {
@@ -433,7 +445,7 @@ footer .social-icons p {
 
   /* FOOTER */
 
-  .footer-img {
+  .footer-img-container {
     width: 45%;
   }
 
@@ -538,12 +550,6 @@ footer .social-icons p {
   }
 
   /* WORK */
-
-  #work .content-wrapper {
-    align-items: center;
-    justify-content: space-around;
-    min-height: 595px;
-  }
 
   #work .p {
     font-size: 1.125em;
